--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,14 @@
-<hinv-rooms></hinv-rooms>
+ <!-- <hinv-rooms><h1></h1></hinv-rooms>  -->
+
+ <hinv-container>
+    <hinv-rooms></hinv-rooms>
+    <hinv-employee></hinv-employee>
+    <h1>this is from ng content</h1>
+ </hinv-container>
+
+ <div #name>
+  
+ </div>
 
 <!-- <div [ngSwitch]="role">
   <div *ngSwitchCase="'User'">Welcome User!</div>
@@ -9,4 +19,9 @@
     You are not authorized to view this page!
 
   </div>
+</div> -->
+
+<!-- <div>
+  <ng-template #user></ng-template>
+  
 </div> -->
