--- a/src/app/rooms/rooms.component.html
+++ b/src/app/rooms/rooms.component.html
@@ -1,4 +1,7 @@
-<h1>{{hotelName}}</h1>
+<!-- <h1>{{hotelName}}</h1> -->
+<hinv-header></hinv-header>
+<hinv-header></hinv-header>
+<hinv-header></hinv-header>
 
 <div [hidden]="hideRooms">
     Number of Rooms:
@@ -8,32 +11,16 @@
 <!-- {{rooms?.availableRooms ?? 'No rooms'}} -->
 <!-- {{roomList | json}} --> <!--Use in development phase(For debugging purpose), NOT in production-->
 
-<div *ngIf="rooms.availableRooms > 0">
-    <!-- Rooms List -->
-    <!-- {{roomList}} -->
-    <table>
-        <tr>
-            <th>Index</th>
-            <th>Even/Odd</th>
-            <th>Room Number</th>
-            <th>Room Type</th>
-            <th>Amenities</th>
-            <th>Price</th>
-            <th>Checkin Time</th>
-            <th>Rating</th>
-        </tr>
-        <tr [ngClass]="e ? 'even' : 'odd'" *ngFor="let room of roomList; let e = even; let o = odd; let i = index">
-            <td>{{i | percent}}</td>
-            <td>{{e ? "Even" : "Odd"}}</td>
-            <td>{{room.roomNumber}}</td>
-            <td>{{room.roomType}}</td>
-            <td>{{room.amenities | titlecase}}</td>
-            <td>{{room.price | currency :'EUR'}}</td>
-            <td>{{room.checkinTime | date }}</td>
-            <td>{{room.rating | number : '1.0-2'}}</td>
-        </tr>
-        
-    </table>
+    <div *ngIf="selectedRoom">
+        {{selectedRoom | json}}
+    </div>
+
+    <div>
+        <button (click)="addRoom()">Add Room</button>
+    </div>
+
+<div *ngIf="hideRooms">
+   <hinv-rooms-list [rooms]="roomList" [title]="title" (selectedRoom)="selectRoom($event)"></hinv-rooms-list>
 </div>
 
 <button (click)="toggle()">Toggle</button>
