Third part : dependency injection

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
- <!-- <hinv-rooms><h1></h1></hinv-rooms>  -->
+  <hinv-rooms><h1></h1></hinv-rooms>  
+  <hinv-employee></hinv-employee>
 
- <hinv-container>
+ <!-- <hinv-container>
     <hinv-rooms></hinv-rooms>
     <hinv-employee></hinv-employee>
     <h1>this is from ng content</h1>
@@ -8,7 +9,7 @@
 
  <div #name>
   
- </div>
+ </div> -->
 
 <!-- <div [ngSwitch]="role">
   <div *ngSwitchCase="'User'">Welcome User!</div>
